--- a/geeks_project/templates/shows/header.html
+++ b/geeks_project/templates/shows/header.html
@@ -28,27 +28,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                    <a class="nav-link active" aria-current="page" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ссылка</a>
+                    <a class="nav-link" href="/books/">Книги</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="/update_show/" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
-                        Выпадающий список
+                        Действия
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Действие</a></li>
-                        <li><a class="dropdown-item" href="#">Другое действие</a></li>
+                        <li><a class="dropdown-item" href="#">Добавить</a></li>
+                        <li><a class="dropdown-item" href="#">Изменить</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+                        <li><a class="dropdown-item" href="#">Удалить</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Отключенная</a>
+                    <a class="nav-link" href="/admin/">Перейти в админку</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
