--- a/geeks_project/templates/shows/show.html
+++ b/geeks_project/templates/shows/show.html
@@ -8,12 +8,12 @@
     <title>Видео: {{ show.title }}</title>
 </head>
 <body>
-    <h1>Название: {{ show.title }}</h1>
-    <h5>Описание: {{ show.description }}</h5>
-    <img src="{{ show.image }}" alt="Превью">
-    <p>Цена: {{ show.price }}</p>
-    <p>Жанр: {{ show.genre }}</p>
-    <p>Автор: {{ show.author }}</p>
-    <a href="{{ show.trailer }}">Ссылка на видео</a>
+    <h1>Название: {{ show_id.title }}</h1>
+    <h5>Описание: {{ show_id.description }}</h5>
+    <img src="{{ sshow_id.image }}" alt="Превью">
+    <p>Цена: {{ show_id.price }}</p>
+    <p>Жанр: {{ show_id.genre }}</p>
+    <p>Автор: {{ show_id.author }}</p>
+    <a href="{{ show_id.trailer }}">Ссылка на видео</a>
 </body>
 </html>
